<resources>
    <string name="app_name">Foodgram</string>
    <string name="empty_string"> </string>

    <string name="empty_fields_error">Please fill in all fields</string>
    <string name="password_mismatch_error">Passwords don\'t match</string>
    <string name="wrong_credentials">Wrong credentials</string>
    <string name="registration_successful">Registration successful</string>
    <string name="registration_failed">Registration failed</string>

    <string name="profile_signIn_message">Please sign in to view your profile</string>
    <string name="sign_in">Sign in</string>
    <string name="log_out">Log out</string>
    <string name="greeting">Hello,</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create new account</string>
    <string name="have_an_account">Have an account?</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="log_in">Log in</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="add_a_restaurant_review">Add a restaurant review</string>
    <string name="restaurant_brand_name">Restaurant/Brand name *</string>
    <string name="restaurant_location">Restaurant location *</string>
    <string name="clear_location">Clear Location</string>
    <string name="enter_type_of_food">What type of food did you eat? *</string>
    <string name="rate_your_experience">Rate your experience</string>
    <string name="type_your_review">Type your review... *</string>
    <string name="upload_images">Upload Images</string>
    <string name="cancel">Cancel</string>
    <string name="post_review">Post Review</string>

    <string name="review_added_success">Review posted successfully</string>
    <string name="post_failed">Failed to post review</string>
    <string name="upload_failed">Failed to upload image</string>
    <string name="permission_denied">Permission denied, cannot access media images</string>
    <string name="max_images_allowed">Maximum %1$d images allowed</string>
    <string name="update_review">Update Review</string>
    <string name="edit_your_review">Edit your review</string>

    <string name="delete_failed">Delete failed</string>
    <string name="review_updated_success">Review updated successfully</string>
    <string name="update_failed">Failed to update review</string>
    <string name="no_reviews_to_show">No reviews to show</string>
    <string name="saved">Saved</string>
    <string name="my_reviews">My reviews</string>
    <string name="edit_review">Edit Review</string>
    <string name="delete_review">Delete Review</string>
    <string name="save">Save</string>
    <string name="speech_to_text">Speech To Text</string>
    <string name="search_bar">Search Bar</string>
    <string name="search_by_restaurant_food_name">Search by restaurant, cafe names</string>
    <string name="add_review">Add review</string>
    <string name="search_by_category">Search by food category</string>

</resources>