<?xml version="1.0" encoding="utf-8"?>

<!-- Search box structure -->

<com.google.android.material.textfield.TextInputLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_search_box"
        android:padding="15dp">

        <ImageView
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/search_bar"/>

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/searchTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:inputType="text"
            android:textSize="12sp"
            android:hint="@string/search_by_category"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/speechToTextButton"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_mic"
                android:background="@color/transparent"
                android:contentDescription="@string/speech_to_text"
                android:onClick="onSpeechToTextButtonClick"/>
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.textfield.TextInputLayout>
